# Screen_Recoder

./: .gitattributes  .gitignore  LICENSE  README.md  form.ui  mainwindow.py  pyproject.toml  pysidedeploy.spec  requirements.txt  ui_form.py
